<resources>
    <string name="app_name">UrduTextToSpeech</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_screen_title">Urdu Text to Speech</string>
    <string name="text_hint">یہاں سے شروع کریں...</string>
    <string name="copy_button">Copy Button</string>
    <string name="recent_files">Recent Files</string>
    <string name="karachi_urdu">Karachi Urdu</string>
    <string name="lahori_urdu">Lahori Urdu</string>
    <string name="pakistani_urdu_accent">Pakistani Urdu Accent</string>
    <string name="standard_urdu">Standard Urdu</string>
    <string name="accent">Accent</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="file_menu">File Menu</string>
    <string name="audio_file">Audio file</string>
    <string name="file_placeholder">File Placeholder</string>
    <string name="cancel_rename">cancel rename</string>
    <string name="rename_your_file">Rename your file</string>
    <string name="no_files_to_show">No files to show</string>
    <string name="play_button">Play Button</string>
    <string name="redo_button">Redo Button</string>
    <string name="undo_button">Undo Button</string>
    <string name="clear_text">clear text</string>
    <string name="see_all">See All</string>
</resources>