<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragmentBackground"
    style="@style/fragmentContainerStyle"
    tools:context=".fragments.Home">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/mainHeadingStyle"
        android:text="@string/home_screen_title"
        android:drawableEnd="@drawable/ic_notification_button"
        android:textColor="@color/headingText"
        app:iconTint="@color/bellIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        style="@style/textEditorCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/textEditorBackground"
        app:strokeColor="@color/boarderOfTextEditor"
        app:layout_constraintTop_toBottomOf="@id/titleText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- EDIT TEXT AREA -->
            
            <EditText
                    android:id="@+id/inputText"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@color/textEditorBackground"
                    android:allowUndo="true"
                    android:autofillHints="text"
                    android:fadeScrollbars="false"
                    android:fontFamily="@font/jameel_noori_nastaleeq_regular"
                    android:gravity="top|start"
                    android:hint="@string/text_hint"
                    android:imeOptions="actionDone"
                    android:includeFontPadding="true"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:scrollbarSize="2dp"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:textDirection="rtl"
                    android:textSize="18sp"/>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingHorizontal="18dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="@drawable/top_border">

                <!-- Left icons -->
                <ImageView
                    android:id="@+id/deleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:tint="@color/textActionIcon"
                    android:contentDescription="TODO"
                    android:src="@drawable/ic_delete_button" />

                <ImageView
                    android:id="@+id/undoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    android:tint="@color/textActionIcon"
                    android:contentDescription="Undo Button"
                    android:src="@drawable/ic_undo_button" />

                <ImageView
                    android:id="@+id/redoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    android:tint="@color/textActionIcon"
                    android:contentDescription="Redo Button"
                    android:src="@drawable/ic_redo_button" />

                <!-- Spacer -->
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <!-- Right icon -->
                <ImageView
                    android:id="@+id/copyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/textActionIcon"
                    android:contentDescription="@string/copy_button"
                    android:src="@drawable/ic_copy_button" />
            </LinearLayout>
            
        </LinearLayout>
        
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/playButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card" />

    <TextView
        android:id="@+id/recentFilesHeading"
        style="@style/homeScreenRecentFilesHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/recentFileText"
        android:text="@string/recent_files"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/playButton" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerFiles"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recentFilesHeading" />

    <ImageView
        android:id="@+id/placeholder"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:contentDescription="No files to show"
        android:src="@drawable/ic_empty_list_placeholder"
        android:visibility="visible"
        android:tint="@color/noFilePlaceHolder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recentFilesHeading"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>
